--- a/pages/add_product.html
+++ b/pages/add_product.html
@@ -14,155 +14,125 @@
             color: white;
         }
 
-        .admin-box {
-            width: 500px;
-            background: rgba(25, 25, 45, 0.92);
-            padding: 35px;
-            margin-top: 60px;
-            border-radius: 15px;
-            box-shadow: 0 0 25px rgba(0, 238, 255, 0.4);
+        .product-form-card {
+            background: rgba(20, 20, 40, 0.92);
+            border-radius: 14px;
+            width: 450px;
+            padding: 28px;
+            margin: auto;
+            margin-top: 70px;
+            box-shadow: 0 0 28px rgba(0, 238, 255, 0.25);
         }
 
-        .admin-box h3 {
+        h3 {
             color: #00eaff;
-            font-weight: bold;
+            font-weight: 700;
+            text-align: center;
+            margin-bottom: 20px;
         }
 
-        .form-control {
-            background-color: transparent;
-            border: none;
-            border-bottom: 2px solid #00eaff;
-            border-radius: 0;
-            color: white;
-        }
-        .form-control:focus {
-            box-shadow: none;
-            border-bottom: 2px solid #6a00ff;
+        label {
+            color: #00eaff;
+            font-weight: 500;
         }
 
-        .btn-add {
-            background: linear-gradient(90deg, #4e00c9, #00eaff);
-            border: none;
-            font-weight: bold;
-            color: #fff;
-        }
-        .btn-add:hover {
-            opacity: .85;
+        input, textarea {
+            background: transparent !important;
+            border: 1px solid #00eaff !important;
+            border-radius: 8px !important;
+            color: white !important;
         }
 
-        #previewImg {
+        input::placeholder,
+        textarea::placeholder {
+            color: #b7d8dd !important;
+        }
+
+        .btn-submit {
             width: 100%;
-            height: 180px;
-            object-fit: cover;
+            background: linear-gradient(90deg, #6a00ff, #00eaff);
+            border: none;
+            font-weight: bold;
+            padding: 10px;
             border-radius: 10px;
-            display: none;
-            margin-bottom: 15px;
-            border: 2px solid #00eaff;
         }
 
-        a {
-            color: #00eaff;
+        .btn-submit:hover {
+            opacity: 0.85;
+        }
+
+        nav a {
+            color: #00eaff !important;
+            font-weight: 500;
         }
     </style>
 </head>
 <body>
 
-<!-- Navbar -->
 <nav class="navbar navbar-dark bg-dark px-3">
     <a class="navbar-brand fw-bold" href="../index.html">ShopEasy</a>
-    <a href="#" id="logoutBtn" class="text-light">Logout</a>
+    <a href="#" id="logoutBtn">Logout</a>
 </nav>
 
-<div class="d-flex justify-content-center">
-    <div class="admin-box shadow">
+<div class="product-form-card">
+    <h3>Add New Product</h3>
 
-        <h3 class="text-center mb-4">Add New Product</h3>
+    <form id="addProductForm">
+        <label>Product Name</label>
+        <input type="text" id="productName" class="form-control mb-3" placeholder="Enter product name" required>
 
-        <img id="previewImg" alt="Preview">
+        <label>Price (₹)</label>
+        <input type="number" id="price" class="form-control mb-3" placeholder="Enter price" required>
 
-        <form id="addProductForm">
+        <label>Description</label>
+        <textarea id="description" rows="3" class="form-control mb-3" placeholder="Enter description" required></textarea>
 
-            <input type="text" id="productName" class="form-control mb-3"
-                placeholder="Product Name" required>
+        <label>Image</label>
+        <input type="file" id="imageFile" accept="image/*" class="form-control mb-3" required>
 
-            <input type="number" id="price" class="form-control mb-3"
-                placeholder="Price (₹)" required>
-
-            <textarea id="description" class="form-control mb-3"
-                placeholder="Description" rows="2" required></textarea>
-
-            <input type="file" id="imageFile" class="form-control mb-3"
-                accept="image/*" required>
-
-            <button class="btn-add w-100 py-2 mt-2" type="submit">
-                + Add Product
-            </button>
-
-        </form>
-
-    </div>
+        <button class="btn-submit" type="submit">+ Add Product</button>
+    </form>
 </div>
-
-<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js"></script>
 
 
 <script>
-// Admin protection
-let user = JSON.parse(localStorage.getItem("loggedInUser"));
-if (!user || user.email !== "admin@gmail.com") {
-    alert("Access Denied! Admin Only.");
-    window.location.href = "login.html";
-}
-
-// Logout
-document.getElementById("logoutBtn").onclick = () => {
-    localStorage.removeItem("loggedInUser");
-    window.location.href = "login.html";
-};
-
-// Image Preview
-document.getElementById("imageFile").addEventListener("change", function(){
-    let file = this.files[0];
-    if(file){
-        let preview = document.getElementById("previewImg");
-        preview.style.display = "block";
-        preview.src = URL.createObjectURL(file);
-    }
-});
-
-// Add product logic
-document.getElementById("addProductForm").addEventListener("submit", function(e){
-    e.preventDefault();
-
-    let name = document.getElementById("productName").value.trim();
-    let price = parseFloat(document.getElementById("price").value);
-    let description = document.getElementById("description").value.trim();
-    let imageFile = document.getElementById("imageFile").files[0];
-
-    if (!name || !price || !description || !imageFile) {
-        alert("Fill all fields properly!");
-        return;
+    let loggedUser = JSON.parse(localStorage.getItem("loggedInUser"));
+    if (!loggedUser || loggedUser.email !== "admin@gmail.com") {
+        alert("Access Denied! Admin Only.");
+        window.location.href = "login.html";
     }
 
-    let imageURL = URL.createObjectURL(imageFile);
+    document.getElementById("logoutBtn").onclick = () => {
+        localStorage.removeItem("loggedInUser");
+        window.location.href = "login.html";
+    };
 
-    let products = JSON.parse(localStorage.getItem("products")) || [];
+    document.getElementById("addProductForm").addEventListener("submit", function(e) {
+        e.preventDefault();
 
-    products.push({
-        id: Date.now(),
-        name,
-        price,
-        description,
-        image: imageURL
+        let name = productName.value.trim();
+        let price = parseInt(document.getElementById("price").value);
+        let description = document.getElementById("description").value.trim();
+        let file = document.getElementById("imageFile").files[0];
+
+        let imageUrl = URL.createObjectURL(file);
+
+        let products = JSON.parse(localStorage.getItem("products")) || [];
+        products.push({
+            id: Date.now(),
+            name,
+            price,
+            description,
+            image: imageUrl
+        });
+
+        localStorage.setItem("products", JSON.stringify(products));
+        alert("Product Added Successfully!");
+        window.location.href = "products.html";
     });
-
-    localStorage.setItem("products", JSON.stringify(products));
-
-    alert("Product added successfully!");
-    window.location.href = "products.html";
-});
 </script>
 
 </body>
 </html>
+
 
